# LLMintegrationFastAPI

./: .gitignore  main.py  pyproject.toml
APIforLLM/: .env  keyHelper.py  keyInfo.py  main.py
localAIAgent/: main.py  vector.py
localAIAgent/chrome_langchain_db/: chroma.sqlite3
ollamaBasic/: ollamaModule.py  sample_request.py
ollamaWithMCP/: ollamaMCP.txt
