[project]
name = "fastapi-demoproject3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "langchain>=1.3.7",
    "langchain-chroma>=1.1.0",
    "langchain-ollama>=1.1.0",
    "ollama>=0.6.2",
    "ollmcp>=0.29.0",
    "openai>=2.41.1",
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "uvicorn>=0.49.0",
    "vector>=1.8.1",
]
